src/objects/Touchpoint__c.object
<CustomObject>
    <fields>
        <fullName>Account_SFID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>TouchPoints (Account)</relationshipLabel>
        <relationshipName>TouchPoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check__c</fullName>
        <label>Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <formula>IF( ISPICKVAL(TouchPoint_Status__c, &quot;Completed&quot;) , NOW(), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_SFID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TouchPoints (Contact)</relationshipLabel>
        <relationshipName>TouchPoints1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <label>Reminder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 day</fullName>
                </value>
                <value>
                    <fullName>2 days</fullName>
                </value>
                <value>
                    <fullName>3 days</fullName>
                </value>
                <value>
                    <fullName>4 days</fullName>
                </value>
                <value>
                    <fullName>5 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TouchPointTypes__c</fullName>
        <label>TouchPointType</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>1:1 Visit</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TouchPoint_Status__c</fullName>
        <label>TouchPoint Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Not Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_SFID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invite Others</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TouchPoints</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Touchpoint</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Description__c</columns>
        <columns>TouchPointTypes__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>TouchPoint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TouchPoints</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>